--- a/dev1-pvc.yml
+++ b/dev1-pvc.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: dev1-pvc
+  namespace: default
 spec:
   storageClassName: dev1-sc
   accessModes:
